<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dpt_seg</name>
  <version>0.0.0</version>
  <description>The model assemble tokens from various stages of the vision transformer into image-like representations at 
  various resolutions and progressively combine them into full-resolution predictions using a convolutional decoder. The transformer backbone processes representations at a constant and 
  relatively high resolution and has a global receptive field at every stage. We implement a semantic segmentation head on top.</description>
  <maintainer email="support@shaderobotics.com">Shade Robotics</maintainer>
  <license>apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend></depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
